# rocos-viz

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  res.qrc  rocos-viz.desktop  rocos_zh_CN.ts  rocosmainwindow.cpp  rocosmainwindow.ui
cmake/: rocos_viz-config.cmake.in
models/502/: base_link.STL  config.yaml  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL
models/iiwa/: link_0.stl  link_2.stl  link_4.stl  link_6.stl  link_7.stl
models/sia/: arm1.STL  arm2.STL  arm3.STL  arm4.STL  arm5.STL  arm6.STL  arm7.STL  base_link.STL  config.yaml
models/sjtu/: arm1.STL  arm2.STL  arm3.STL  arm4.STL  arm5.STL  arm6.STL  arm7.STL  base_link.STL  config.yaml
models/talon/: base_link.STL  config.yaml  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL
models/techsoft_tb6_r3/: base_link.STL  config.yaml  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL
models/ur3/: config.yaml  upperarm.dae
models/ur5e/: forearm_add.dae  shoulder.dae  upperarm.dae  upperarm.stl  upperarm_add.dae  upperarm_add.stl  wrist1.dae  wrist2.dae
protos/: demo_grpc.py  geometry.proto  geometry_pb2.py  geometry_pb2.pyi  header.proto  header_pb2.py  header_pb2.pyi  robot_command.proto  robot_command_pb2.py  robot_command_pb2.pyi  robot_info.proto  robot_info_pb2.py  robot_info_pb2.pyi  robot_service.proto  robot_service_pb2.py  robot_service_pb2.pyi  robot_service_pb2_grpc.py  robot_state.proto  robot_state_pb2.py  robot_state_pb2.pyi
res/: 交大 机械臂控制器界面 logo.pptx
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Caldialog.cpp  Caldialog.h  Caldialog.ui  CalibrationDialog.cpp  CalibrationDialog.h  CalibrationDialog.ui  CartesianPositionWidget.cpp  CartesianPositionWidget.h  CartesianPositionWidget.ui  ConnectDialog.cpp  ConnectDialog.h  ConnectDialog.ui  JointPositionBar.h  JointPositionWidget.cpp  JointPositionWidget.h  JointPositionWidget.ui  JointpositionBar.cpp  Link.cpp  Link.h  Model.cpp  Model.h  ModelLoaderDialog.cpp  ModelLoaderDialog.h  ModelLoaderDialog.ui  MouseInteractorChooseActor.cpp  MouseInteractorChooseActor.h  PlotConfigDialog.cpp  PlotConfigDialog.h  PlotConfigDialog.ui  PlotDialog.cpp  PlotDialog.h  PlotDialog.ui  PlotWidget.cpp  PlotWidget.h  PlotWidget.ui  PositionBar.cpp  PositionBar.h  (+12 more)
